--- a/t-port/src/sass/_variables.sass
+++ b/t-port/src/sass/_variables.sass
@@ -34,6 +34,7 @@ $menus-font: Mission, 'Mission Gothic Light'
 $main-font: Mission, 'Mission Gothic Thin'
 
 $header-color: #f2f2f2
-$main-color: #29b8ed
+$main-color: #253149
+$additional-color: #fb161a
 
 $substrate-bg-color: rgba(255,255,255,0.8)
