--- a/t-port/src/sass/_cards.sass
+++ b/t-port/src/sass/_cards.sass
@@ -1,6 +1,6 @@
 .card
   width: 90%
-  border-radius: 20px
+  border-radius: 8px
   background: #eee
   padding: 20px
   flex-direction: column
@@ -16,24 +16,26 @@
   top: 0
   margin: 10px 0
   left: 5%
-  border: 1px solid #29b8ed
+  border: 1px solid $main-color
+
+.card__header
+  display: flex
+  flex-direction: row
+  align-items: center
 
 .card__title
-  font-size: 1.5em
+  font-size: 1.7em
   font-family: $logo-font
+  margin: 20px 0
 
 .card--shown
   opacity: 1
   display: flex
 
 .card__button--bookmark
-  position: absolute
-  top: -8px
-  right: 40px
   margin: 5px
   z-index: 2
   &:hover
-    color: $main-color
     cursor: pointer
   i
     font-size: 1.8em
@@ -67,6 +69,6 @@
   margin: 5px
   z-index: 2
   &:hover
-    color: $main-color
+    color: $additional-color
     cursor: pointer
   
