--- a/t-port/src/sass/_menus.sass
+++ b/t-port/src/sass/_menus.sass
@@ -1,11 +1,11 @@
 .menu
-  background: #eee
+  background: #f2f2f2
   padding: 10px
   margin: 10px
   display: flex
   flex-direction: column
   align-items: center
-  border-radius: 10px
+  border-radius: 8px
   border: 1px solid $main-color
 
 .menu__title
@@ -21,33 +21,38 @@
   margin: 5px
   z-index: 2
   &:hover
-    color: $main-color
+    color: $additional-color
     cursor: pointer
+
+.menu__button--closing-card
+  margin: 10px
 
 .menu__input
   width: 100%
   margin: 10px 0
   padding: 5px 10px
-  border-radius: 10px
-  background: #ddd
+  border-radius: 8px
+  background: #fff
+  border: 1px solid #ccc
   color: #000
   font-family: $main-font
   font-size: 1.2em
   &:focus
     background: #fff
-    border: none  
+    border: 1px solid $main-color  
 
 .menu__button--submit
   font-size: 1.3em
   border: 1px solid $main-color
-  background: lighten($main-color,35%)
+  background: lighten($main-color,15%)
   border-radius: 20px
   padding: 5px
+  color: #fff
   margin-top: 5px
   width: 60%
   text-align: center
   &:hover
-    background: lighten($main-color,20%)
+    background: $main-color
     cursor: pointer
 
 
@@ -130,7 +135,7 @@
   margin: 10px
   width: 100%
   background: #e1e1e1
-  border-radius: 10px
+  border-radius: 8px
   &:hover
     background: darken(#eee,10%)
     cursor: pointer
@@ -142,11 +147,11 @@
   margin: 5px
   z-index: 2
   &:hover
-    color: $main-color
+    color: $additional-color
     cursor: pointer
 
 .menu__button--remove-favorites:hover
-  color: $main-color
+  color: $additional-color
   cursor: pointer
 
 @media (max-width: 470px)
@@ -163,6 +168,7 @@
   left: 0
   display: none
   top: -130px
+  font-weight: 900
   visibility: hidden
   z-index: 8
   transition: top 0.4s ease
@@ -268,7 +274,7 @@
     font-size: 1.4em
     cursor: pointer
   &:hover
-    color: $main-color
+    color: $additional-color
 
 
 
@@ -297,7 +303,7 @@
       min-width: 150px
       width: 100%
       background: #e1e1e1
-      border-radius: 10px
+      border-radius: 8px
       display: flex
       flex-direction: row
       align-items: center
