--- a/t-port/src/sass/_pagination.sass
+++ b/t-port/src/sass/_pagination.sass
@@ -11,11 +11,12 @@
     padding: 8px 16px
     text-decoration: none
     cursor: pointer
+    color: #000    
     &:hover:not(.pagination--active)
       background-color: #ddd
-      border-radius: 5px
-
-.pagination--active
+      border-radius: 8px
+  .pagination--active
     background-color: $main-color
-    color: white
     border-radius: 5px
+    color: #fff
+
