--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -5,9 +5,10 @@
 table
   border-collapse: collapse
   width: 100%
+  table-layout: fixed
   td, th  
     border-bottom: 1px solid #ddd
-    padding: 5px
+    padding: 5px 15px
     text-align: left
     vertical-align: middle
   tr:nth-child(even)
@@ -26,19 +27,26 @@ table
   background: darken($main-color,5%)
   cursor: pointer
 
+.centered
+  text-align: center
 
 .table-edit-input
   background: #eee
-  border-radius: 10px
+  border-radius: 8px
   border: 1px solid #bbb
   padding: 3px 10px
   width: 100%
   &:focus
     background: #fff
 
+.table-editor-buttons__td
+  display: flex
+  flex-direction: row
+  justify-content: space-evenly
+
 .table-editor-buttons:hover
-    color: $main-color
-    cursor: pointer
+  color: $additional-color
+  cursor: pointer
 
 .table__editor-tools-button
   position: absolute
@@ -58,7 +66,7 @@ table
 
 .table__link:hover
   cursor: pointer
-  color: $main-color
+  color: $additional-color
 
 @media (max-width: 450px)
   .table__editor-tools-button
