--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -23,6 +23,11 @@ table
     color: #fff
     vertical-align: middle
 
+.highlited
+  background: lighten($additional-color,25%) !important
+  .table__link:hover
+    color: #000
+
 .table__column-title--sortable:hover
   background: darken($main-color,5%)
   cursor: pointer
