preparing for algo implementing

--- a/t-port/src/css/styles.css
+++ b/t-port/src/css/styles.css
@@ -370,7 +370,7 @@ table th {
 }
 
 .highlited {
-  background: #fd9395 !important;
+  background: #6c84b4 !important;
 }
 .highlited .table__link:hover {
   color: #000;
