--- a/t-port/src/sass/_tables.sass
+++ b/t-port/src/sass/_tables.sass
@@ -24,7 +24,7 @@ table
     vertical-align: middle
 
 .highlited
-  background: lighten($additional-color,25%) !important
+  background: lighten($main-color,35%) !important
   .table__link:hover
     color: #000
 
