--- a/t-port/src/sass/_cards.sass
+++ b/t-port/src/sass/_cards.sass
@@ -13,7 +13,7 @@
   position: absolute
   z-index: 13
   margin: auto
-  top: 0
+  top: 62px
   margin: 10px 0
   left: 5%
   border: 1px solid $main-color
