--- a/t-port/src/sass/_header-style.sass
+++ b/t-port/src/sass/_header-style.sass
@@ -30,6 +30,12 @@ header
   background-size: cover
   width: 124px
   height: 48px
+@media (max-width: 585px)
+  .logo
+    background: url(./../images/logo-small.png) no-repeat
+    background-size: cover
+    width: 48px
+    height: 48px
 
 .navigation-bar
   display: flex
